Update results with new header

--- a/results/1990.md
+++ b/results/1990.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTP | 884
 OPV | 470
@@ -26,7 +26,7 @@ MU | 1
 SMALL | 1
 UNK | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 DTP-LEDERLE LABORATORIES | 496
 OPV-PFIZER\WYETH | 427
