--- a/results/1991.md
+++ b/results/1991.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTP | 4253
 OPV | 3220
@@ -28,7 +28,7 @@ HBPV | 2
 MUR | 2
 BCG | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 OPV-PFIZER\WYETH | 3118
 DTP-LEDERLE LABORATORIES | 2873
