--- a/results/1993.md
+++ b/results/1993.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 HEP | 3702
 DTP | 3297
@@ -30,7 +30,7 @@ PLAGUE | 4
 ANTH | 4
 HBPV | 2
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 OPV-PFIZER\WYETH | 2856
 HIBV-PFIZER\WYETH | 2493
