--- a/results/1994.md
+++ b/results/1994.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 OPV | 3347
 HEP | 3280
@@ -32,7 +32,7 @@ PLAGUE | 1
 PER | 1
 MUR | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 OPV-PFIZER\WYETH | 3257
 HEP-MERCK & CO. INC. | 2133
