--- a/results/1995.md
+++ b/results/1995.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 OPV | 3040
 HEP | 2841
@@ -36,7 +36,7 @@ MUR | 1
 PER | 1
 JEVX | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 OPV-PFIZER\WYETH | 2921
 MMR-MERCK & CO. INC. | 1868
