--- a/results/1996.md
+++ b/results/1996.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 HEP | 2712
 OPV | 2586
@@ -32,7 +32,7 @@ PLAGUE | 1
 MUR | 1
 MU | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 OPV-PFIZER\WYETH | 2500
 VARCEL-MERCK & CO. INC. | 1900
