--- a/results/1997.md
+++ b/results/1997.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 HEP | 2636
 VARCEL | 2402
@@ -34,7 +34,7 @@ PLAGUE | 2
 MM | 1
 JEVX | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARCEL-MERCK & CO. INC. | 2401
 MMR-MERCK & CO. INC. | 1856
