--- a/results/1998.md
+++ b/results/1998.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 HEP | 2421
 VARCEL | 1913
@@ -36,7 +36,7 @@ TBE | 1
 BCG | 1
 DTPPHIB | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARCEL-MERCK & CO. INC. | 1913
 MMR-MERCK & CO. INC. | 1737
