--- a/results/1999.md
+++ b/results/1999.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 VARCEL | 2644
 DTAP | 2363
@@ -40,7 +40,7 @@ MER | 1
 BCG | 1
 PLAGUE | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARCEL-MERCK & CO. INC. | 2644
 MMR-MERCK & CO. INC. | 1937
