--- a/results/2000.md
+++ b/results/2000.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 VARCEL | 2886
 DTAP | 2884
@@ -43,7 +43,7 @@ PER | 1
 ADEN | 1
 SMALL | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARCEL-MERCK & CO. INC. | 2885
 MMR-MERCK & CO. INC. | 2356
