--- a/results/2001.md
+++ b/results/2001.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTAP | 3875
 IPV | 2948
@@ -46,7 +46,7 @@ ADEN | 2
 MM | 2
 DPP | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 MMR-MERCK & CO. INC. | 2855
 PNC-PFIZER\WYETH | 2795
