--- a/results/2002.md
+++ b/results/2002.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTAP | 4595
 MMR | 3508
@@ -46,7 +46,7 @@ DTPIPV | 1
 DPP | 1
 RV5 | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 MMR-MERCK & CO. INC. | 3457
 IPV-SANOFI PASTEUR | 3174
