--- a/results/2003.md
+++ b/results/2003.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTAP | 5039
 MMR | 4045
@@ -49,7 +49,7 @@ DTPIHI | 1
 RV | 1
 MUR | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 MMR-MERCK & CO. INC. | 3926
 IPV-SANOFI PASTEUR | 3534
