--- a/results/2004.md
+++ b/results/2004.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTAP | 4386
 MMR | 4058
@@ -46,7 +46,7 @@ DTPIHI | 1
 RV | 1
 CHOL | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 MMR-MERCK & CO. INC. | 3882
 IPV-SANOFI PASTEUR | 3097
