--- a/results/2005.md
+++ b/results/2005.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 MMR | 3679
 DTAP | 3599
@@ -54,7 +54,7 @@ DTPHEP | 1
 RV | 1
 MUR | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 MMR-MERCK & CO. INC. | 3563
 VARCEL-MERCK & CO. INC. | 2683
