--- a/results/2006.md
+++ b/results/2006.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 MMR | 3390
 DTAP | 3388
@@ -58,7 +58,7 @@ PER | 2
 RV | 2
 JEVX | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 MMR-MERCK & CO. INC. | 3284
 VARCEL-MERCK & CO. INC. | 3085
