--- a/results/2007.md
+++ b/results/2007.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 HPV4 | 5650
 VARCEL | 4636
@@ -59,7 +59,7 @@ DTPIHI | 2
 DTPPHIB | 2
 MUR | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 HPV4-MERCK & CO. INC. | 5650
 VARCEL-MERCK & CO. INC. | 4457
