--- a/results/2008.md
+++ b/results/2008.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 HPV4 | 6046
 VARCEL | 5851
@@ -64,7 +64,7 @@ HBPV | 1
 PLAGUE | 1
 TBE | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 HPV4-MERCK & CO. INC. | 6046
 VARCEL-MERCK & CO. INC. | 5662
