--- a/results/2009.md
+++ b/results/2009.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 5509
 FLU(H1N1) | 4703
@@ -68,7 +68,7 @@ MNC | 1
 BCG | 1
 MER | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARCEL-MERCK & CO. INC. | 4414
 HPV4-MERCK & CO. INC. | 3241
