--- a/results/2010.md
+++ b/results/2010.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 7726
 VARCEL | 3957
@@ -72,7 +72,7 @@ DTPPHIB | 1
 FLUA3 | 1
 MER | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 FLU3-SANOFI PASTEUR | 3900
 VARCEL-MERCK & CO. INC. | 3722
