--- a/results/2011.md
+++ b/results/2011.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 6848
 VARCEL | 3478
@@ -71,7 +71,7 @@ RV | 1
 PNC10 | 1
 MUR | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 FLU3-SANOFI PASTEUR | 4176
 VARCEL-MERCK & CO. INC. | 3220
