--- a/results/2013.md
+++ b/results/2013.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 7134
 VARZOS | 5049
@@ -72,7 +72,7 @@ HEPATYP | 1
 DTPHEP | 1
 RV | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARZOS-MERCK & CO. INC. | 4939
 FLU3-SANOFI PASTEUR | 3874
