--- a/results/2014.md
+++ b/results/2014.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 6602
 VARZOS | 4711
@@ -77,7 +77,7 @@ H5N1 | 1
 JEV | 1
 CHOL | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARZOS-MERCK & CO. INC. | 4610
 HPV4-MERCK & CO. INC. | 3663
