--- a/results/2015.md
+++ b/results/2015.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 7333
 PNC13 | 4651
@@ -80,7 +80,7 @@ MER | 1
 HBPV | 1
 HEPATYP | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 PNC13-PFIZER\WYETH | 4651
 FLU3-SANOFI PASTEUR | 4217
