--- a/results/2016.md
+++ b/results/2016.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 PPV | 5471
 FLU3 | 5140
@@ -80,7 +80,7 @@ MUR | 1
 MER | 1
 SSEV | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 PPV-MERCK & CO. INC. | 5064
 PNC13-PFIZER\WYETH | 3956
