--- a/results/2017.md
+++ b/results/2017.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 PPV | 5076
 FLU4 | 5001
@@ -81,7 +81,7 @@ DTPHEP | 1
 DTIPV | 1
 PLAGUE | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 PPV-MERCK & CO. INC. | 4820
 VARZOS-MERCK & CO. INC. | 3684
