--- a/results/2018.md
+++ b/results/2018.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 VARZOS | 18391
 FLU4 | 5686
@@ -69,7 +69,7 @@ FLU(H1N1) | 1
 JEVX | 1
 FLUN(H1N1) | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 14813
 PPV-MERCK & CO. INC. | 4060
