--- a/results/2019.md
+++ b/results/2019.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 VARZOS | 18333
 FLU4 | 4714
@@ -66,7 +66,7 @@ TBE | 1
 MNQHIB | 1
 ADEN | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 16579
 PPV-MERCK & CO. INC. | 3322
