--- a/results/2020.md
+++ b/results/2020.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 VARZOS | 11412
 COVID19 | 10880
@@ -62,7 +62,7 @@ RUB | 1
 MENHIB | 1
 DF | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10179
 COVID19-PFIZER\BIONTECH | 7727
