--- a/results/2021.md
+++ b/results/2021.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 COVID19 | 76011
 UNK | 130
@@ -44,7 +44,7 @@ PNC | 1
 OPV | 1
 YF | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 COVID19-MODERNA | 34909
 COVID19-PFIZER\BIONTECH | 29598
