--- a/results/1992.md
+++ b/results/1992.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 DTP | 3990
 HEP | 3489
@@ -32,7 +32,7 @@ ADEN | 1
 SMALL | 1
 HBPV | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 OPV-PFIZER\WYETH | 3198
 HIBV-PFIZER\WYETH | 2938
