--- a/results/2012.md
+++ b/results/2012.md
@@ -1,5 +1,5 @@
 # Total Vaccinations
-Vax Type | Total
+Vax Type | Vaccinations
 --- | ---
 FLU3 | 6787
 VARZOS | 3858
@@ -70,7 +70,7 @@ H5N1 | 1
 HBPV | 1
 DTOX | 1
 ---
-Vax ID | Total
+Vax ID | Vaccinations
 --- | ---
 FLU3-SANOFI PASTEUR | 3847
 VARZOS-MERCK & CO. INC. | 3747
