--- a/results/2021.md
+++ b/results/2021.md
@@ -1,9 +1,9 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 76011
-UNK | 130
-VARZOS | 124
+COVID19 | 109199
+UNK | 201
+VARZOS | 126
 FLUX | 49
 FLU4 | 47
 PPV | 29
@@ -11,17 +11,17 @@ HEP | 11
 MMR | 11
 PNC13 | 11
 FLUR4 | 9
+HPV9 | 8
 MNQ | 8
-HPV9 | 7
 TDAP | 7
 DTAP | 6
 FLU3 | 6
 FLUA4 | 5
 FLUC4 | 4
+FLUA3 | 4
 HEPA | 4
 VARCEL | 4
 DTAPIPVHIB | 4
-FLUA3 | 3
 MENB | 3
 DTAPHEPBIP | 2
 HIBV | 2
@@ -38,6 +38,7 @@ ANTH | 1
 TD | 1
 HPVX | 1
 DTP | 1
+ADEN_4_7 | 1
 RAB | 1
 FLUN4 | 1
 PNC | 1
@@ -46,10 +47,10 @@ YF | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 34909
-COVID19-PFIZER\BIONTECH | 29598
-COVID19-JANSSEN | 11396
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 61
+COVID19-MODERNA | 45515
+COVID19-PFIZER\BIONTECH | 38376
+COVID19-JANSSEN | 25158
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 63
 VARZOS-MERCK & CO. INC. | 57
 FLU4-SANOFI PASTEUR | 29
 PPV-MERCK & CO. INC. | 24
@@ -57,17 +58,17 @@ FLU4-GLAXOSMITHKLINE BIOLOGICALS | 13
 MMR-MERCK & CO. INC. | 11
 PNC13-PFIZER\WYETH | 11
 FLUR4-PROTEIN SCIENCES CORPORATION | 9
-HPV9-MERCK & CO. INC. | 7
+HPV9-MERCK & CO. INC. | 8
 MNQ-SANOFI PASTEUR | 7
 FLU3-SANOFI PASTEUR | 6
 FLU4-SEQIRUS, INC. | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLUA4-SEQIRUS, INC. | 5
 FLUC4-SEQIRUS, INC. | 4
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
 TDAP-SANOFI PASTEUR | 4
 VARCEL-MERCK & CO. INC. | 4
 DTAPIPVHIB-SANOFI PASTEUR | 4
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 3
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2
 HPV4-MERCK & CO. INC. | 2
 HEPA-MERCK & CO. INC. | 2
@@ -86,6 +87,7 @@ MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 TYP-SANOFI PASTEUR | 1
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
+ADEN_4_7-TEVA PHARMACEUTICALS | 1
 HIBV-MERCK & CO. INC. | 1
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
@@ -97,7 +99,7 @@ YF-SANOFI PASTEUR | 1
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 3201
+COVID19 | 3591
 UNK | 29
 FLU4 | 8
 VARZOS | 8
@@ -115,9 +117,9 @@ RAB | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-MODERNA | 1583
-COVID19-PFIZER\BIONTECH | 1439
-COVID19-JANSSEN | 163
+COVID19-MODERNA | 1759
+COVID19-PFIZER\BIONTECH | 1590
+COVID19-JANSSEN | 223
 FLU4-SANOFI PASTEUR | 8
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 5
 PPV-MERCK & CO. INC. | 4
@@ -136,9 +138,9 @@ RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 348814
-UNK | 654
-VARZOS | 503
+COVID19 | 501857
+UNK | 981
+VARZOS | 506
 FLU4 | 258
 FLUX | 216
 PPV | 152
@@ -150,9 +152,9 @@ HEPA | 39
 VARCEL | 39
 FLUA4 | 37
 TDAP | 36
-HPV9 | 32
+HPV9 | 35
 MNQ | 30
-FLUA3 | 27
+FLUA3 | 30
 HPVX | 27
 HPV4 | 24
 MENB | 22
@@ -175,16 +177,17 @@ IPV | 5
 ANTH | 4
 TD | 3
 CHOL | 2
+ADEN_4_7 | 2
 RAB | 2
 PNC | 2
 DTP | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 156894
-COVID19-PFIZER\BIONTECH | 137727
-COVID19-JANSSEN | 53608
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 319
+COVID19-MODERNA | 203281
+COVID19-PFIZER\BIONTECH | 176530
+COVID19-JANSSEN | 121278
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 322
 FLU4-SANOFI PASTEUR | 178
 VARZOS-MERCK & CO. INC. | 157
 PPV-MERCK & CO. INC. | 144
@@ -194,9 +197,9 @@ PNC13-PFIZER\WYETH | 52
 FLUR4-PROTEIN SCIENCES CORPORATION | 46
 VARCEL-MERCK & CO. INC. | 39
 FLUA4-SEQIRUS, INC. | 37
-HPV9-MERCK & CO. INC. | 32
+HPV9-MERCK & CO. INC. | 35
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 30
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 27
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 27
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 26
 MNQ-SANOFI PASTEUR | 25
 TDAP-SANOFI PASTEUR | 25
@@ -224,6 +227,7 @@ TYP-SANOFI PASTEUR | 4
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 3
 HIBV-MERCK & CO. INC. | 3
 TYP-BERNA BIOTECH, LTD. | 3
+ADEN_4_7-TEVA PHARMACEUTICALS | 2
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 PNC-PFIZER\WYETH | 2
